# solow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/solow/: Cargo.toml
crates/solow-bayes/: Cargo.toml  README.md
crates/solow-bayes/src/: lib.rs  map_estimation.rs
crates/solow-bayes/tests/: reference.rs  reference_ext.rs
crates/solow-bench/: BENCHMARKS.md  Cargo.toml
crates/solow-bench/benches/: estimators.rs
crates/solow-bench/src/: lib.rs
crates/solow-copula/: Cargo.toml  README.md
crates/solow-copula/src/: archimedean.rs  bvn.rs  elliptical.rs  lib.rs  rank.rs
crates/solow-copula/tests/: reference.rs
crates/solow-core/: Cargo.toml  README.md
crates/solow-core/src/: error.rs  lib.rs  tools.rs
crates/solow-discrete/: Cargo.toml  README.md
crates/solow-discrete/src/: conditional.rs  genpoisson.rs  lib.rs  model.rs  multinomial.rs  negbin.rs  ordered.rs  summary.rs  truncated.rs  zip.rs
crates/solow-discrete/tests/: degenerate.rs  ill_scaled_convergence.rs  reference.rs  reference_ext.rs  reference_ext2.rs  reference_ext3.rs
crates/solow-distributions/: Cargo.toml  README.md
crates/solow-distributions/src/: continuous.rs  continuous_ext.rs  discrete.rs  empirical.rs  lib.rs  special.rs
crates/solow-distributions/tests/: degenerate.rs  reference.rs  reference_ext.rs
crates/solow-duration/: Cargo.toml  README.md
crates/solow-duration/src/: cumincidence.rs  hazard.rs  lib.rs  phreg_ties.rs  survdiff.rs  survfunc.rs
crates/solow-duration/tests/: reference.rs  reference_ext.rs
crates/solow-emplike/: Cargo.toml  README.md
crates/solow-emplike/src/: lib.rs  root.rs
crates/solow-emplike/tests/: reference.rs
crates/solow-fit/: Cargo.toml  README.md
crates/solow-fit/src/: lib.rs
crates/solow-fit/tests/: formula_vs_manual.rs  glm_discrete_and_summary.rs
crates/solow-formula/: Cargo.toml  README.md
crates/solow-formula/src/: ast.rs  contrasts.rs  data.rs  design.rs  eval.rs  lib.rs  parser.rs  redundancy.rs  terms.rs
crates/solow-formula/tests/: reference.rs  reference_ext.rs  unit.rs
crates/solow-gallery/: Cargo.toml
crates/solow-gallery/src/: common.rs
crates/solow-gam/: Cargo.toml  README.md
crates/solow-gam/src/: bspline.rs  cyclic.rs  gam.rs  gam_ext.rs  lib.rs
crates/solow-gam/tests/: reference.rs  reference_ext.rs
crates/solow-gee/: Cargo.toml  README.md
crates/solow-gee/src/: categorical.rs  gee.rs  lib.rs
crates/solow-gee/tests/: reference.rs  reference_ext.rs
crates/solow-glm/: Cargo.toml  README.md
crates/solow-glm/src/: family.rs  glm.rs  lib.rs  links.rs  tweedie.rs
crates/solow-glm/tests/: degenerate.rs  reference.rs  reference_ext.rs
crates/solow-graphics/: Cargo.toml  README.md
crates/solow-graphics/src/: influence.rs  lib.rs
crates/solow-graphics/tests/: reference.rs  reference_ext.rs
crates/solow-impute/: Cargo.toml  README.md
crates/solow-impute/src/: combine.rs  lib.rs  regression.rs
crates/solow-impute/tests/: reference.rs
crates/solow-linalg/: Cargo.toml  README.md
crates/solow-linalg/src/: decomp.rs  lib.rs  solve.rs
crates/solow-linalg/tests/: reference.rs
crates/solow-mixed/: Cargo.toml  README.md
crates/solow-mixed/src/: lib.rs  model.rs
crates/solow-mixed/tests/: reference.rs
crates/solow-multivariate/: Cargo.toml  README.md
crates/solow-multivariate/src/: cancorr.rs  factor.rs  lib.rs  manova.rs  mvstats.rs  pca.rs  rotation.rs
crates/solow-nonparametric/: Cargo.toml  README.md
crates/solow-optimize/: Cargo.toml  README.md
crates/solow-optimize/src/: lib.rs  numdiff.rs  optimizer.rs
crates/solow-othermod/: Cargo.toml  README.md
crates/solow-polars/: Cargo.toml  README.md
crates/solow-polars/src/: lib.rs
crates/solow-py/: Cargo.toml  README.md  pyproject.toml
crates/solow-py/.cargo/: config.toml
crates/solow-py/src/: lib.rs
crates/solow-regime/: Cargo.toml  README.md
crates/solow-regression/: Cargo.toml  README.md
crates/solow-regression/examples/: full_summary.rs
crates/solow-regression/src/: dimred.rs  glsar.rs  lib.rs  linear.rs  quantile.rs  recursive.rs  robustcov.rs  rolling.rs
crates/solow-regression/tests/: degenerate.rs  reference.rs  reference_ext.rs  reference_ext2.rs  reference_ext3.rs
crates/solow-robust/: Cargo.toml  README.md
crates/solow-statespace/: Cargo.toml  README.md
crates/solow-statespace/src/: dynamic_factor.rs  kalman.rs  lib.rs  mvkalman.rs  sarimax.rs  structural.rs
crates/solow-statespace/tests/: reference.rs  reference_ext.rs
crates/solow-stats/: Cargo.toml  README.md
crates/solow-summary/: Cargo.toml  README.md
crates/solow-summary/src/: format.rs  lib.rs  regression.rs  table.rs
crates/solow-summary/tests/: reference.rs
crates/solow-tsa/: Cargo.toml  README.md
crates/solow-tsa/src/: kpss.rs  (+16 more)
crates/solow-var/: Cargo.toml  README.md
crates/solow-var/src/: coint_tables.rs  lib.rs  svar.rs  var_model.rs  vecm.rs
crates/solow-var/tests/: reference.rs  reference_ext.rs
crates/solow-viz/: Cargo.toml  README.md
crates/solow-viz/examples/: gallery.rs
crates/solow-viz/src/: axes.rs  color.rs  figure.rs  lib.rs  png.rs  render.rs  scale.rs  series.rs
crates/solow/examples/: ols_and_plot.rs
crates/solow/src/: lib.rs
crates/solow/tests/: validation.rs
docs/: BENCHMARKS.md  ROADMAP.md  VALIDATION.md
docs/book/: book.toml
tests/fixtures/: bayes.json  bayes_ext.json  copula.json  discrete.json  discrete_ext.json  discrete_ext2.json  discrete_ext3.json  distributions.json  distributions_ext.json  duration.json  duration_ext.json  emplike.json  formula.json  formula_ext.json  gam.json  gam_ext.json  gee.json  gee_ext.json  glm.json  glm_ext.json  graphics.json  graphics_ext.json  impute.json  linalg.json  mixed.json  models.json  multivariate.json  multivariate_ext.json  multivariate_ext2.json  nonparametric.json  nonparametric_ext.json  othermod.json  regime.json  regression_ext.json  regression_ext2.json  regression_ext3.json  robust.json  robust_ext.json  statespace.json  statespace_ext.json  (+15 more)
(+119 files in other folders)
