[package]
name = "solow-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Benchmarks for the Solow statistical library"
publish = false

[dependencies]
ndarray.workspace = true
solow.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "estimators"
harness = false
