[package]
name = "solow-fit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Ergonomic formula-driven model fitting for the Solow statistical library"

[dependencies]
ndarray.workspace = true
solow-core.workspace = true
solow-formula.workspace = true
solow-regression.workspace = true
solow-glm.workspace = true
solow-discrete.workspace = true
solow-summary.workspace = true

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true
