[package]
name = "solow-formula"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "R/patsy-style formula interface (design-matrix builder) for the Solow statistical library"

[dependencies]
ndarray.workspace = true
solow-core.workspace = true

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true
