[package]
name = "solow-graphics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Statistical graphics (qqplot, plot_acf, regression plots) on solow-viz"

[dependencies]
ndarray.workspace = true
num-traits.workspace = true
solow-core.workspace = true
solow-distributions.workspace = true
solow-regression.workspace = true
solow-viz.workspace = true

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true
