[package]
name = "solow-linalg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure-Rust linear algebra (SVD, eigendecomposition, Cholesky, QR, LU, pseudoinverse) for the Solow statistical library"

[dependencies]
ndarray.workspace = true
num-traits.workspace = true
solow-core.workspace = true

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true
