[package]
name = "solow-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for the Solow statistical library"
license = "BSD-3-Clause"
publish = false

[lib]
name = "solow"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
ndarray = "0.16"
solow = { path = "../solow" }

[workspace]
