[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "solow"
version = "0.1.0"
description = "Fast, pure-Rust statistical modeling for Python: OLS/WLS/GLS, GLM, discrete-choice and count models, and time-series autoregression, all over NumPy arrays."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Murat Ova" }]
keywords = [
    "statistics",
    "econometrics",
    "regression",
    "glm",
    "time-series",
    "numpy",
    "rust",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.21"]

[project.urls]
homepage = "https://stochasticminds.com"
repository = "https://github.com/benovamurat/solow"

[tool.maturin]
# Build the abi3 cdylib defined by this crate's Cargo.toml ([lib] name = "solow",
# crate-type = ["cdylib"], pyo3 features "extension-module" + "abi3-py39"). A
# single abi3 wheel is compatible with CPython 3.9+.
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
strip = true
