[package]
name = "solow-regression"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Linear regression models (OLS, GLS, WLS, GLSAR) for the Solow statistical library"

[dependencies]
ndarray.workspace = true
num-traits.workspace = true
solow-core.workspace = true
solow-linalg.workspace = true
solow-distributions.workspace = true

[dev-dependencies]
approx.workspace = true
serde.workspace = true
serde_json.workspace = true
proptest = "1.8"
