[package]
name = "solow-statespace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "State-space models: Kalman filter/smoother, SARIMAX, unobserved components"

[dependencies]
ndarray.workspace = true
num-traits.workspace = true
solow-core.workspace = true
solow-linalg.workspace = true
solow-distributions.workspace = true
solow-optimize.workspace = true

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true
